--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Fix Rollup dependencies
+        run: |
+          npm install @rollup/rollup-linux-x64-gnu --save-optional || true
+          npm rebuild
+
       - name: Build
         run: npm run build
 
