--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node scripts/generate-sitemap.js",
+    "build": "vite build && node scripts/generate-sitemap.js && node scripts/generate-static-routes.js",
     "build:sitemap": "node scripts/generate-sitemap.js",
     "preview": "vite preview"
   },
